# UKCppLog

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TestBadges.md  _u_k_logger_8cpp.html  _u_k_logger_8cpp.js  _u_k_logger_8cpp__incl.dot  _u_k_logger_8cpp__incl.map  _u_k_logger_8cpp__incl.md5  _u_k_logger_8cpp_source.html  _u_k_logger_8hpp.html  _u_k_logger_8hpp.js  _u_k_logger_8hpp__dep__incl.dot  _u_k_logger_8hpp__dep__incl.map  _u_k_logger_8hpp__dep__incl.md5  _u_k_logger_8hpp__incl.dot  _u_k_logger_8hpp__incl.map  _u_k_logger_8hpp__incl.md5  _u_k_logger_8hpp_source.html  annotated.html  annotated_dup.js  classes.html  classuk_1_1log_1_1_u_k_logger-members.html  classuk_1_1log_1_1_u_k_logger.html  classuk_1_1log_1_1_u_k_logger.js  classuk_1_1log_1_1_u_k_logger__coll__graph.dot  classuk_1_1log_1_1_u_k_logger__coll__graph.map  classuk_1_1log_1_1_u_k_logger__coll__graph.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  graph_legend.html  index.html  namespacemembers.html  (+9 more)
.github/workflows/: Sanitize.yml  clang-tidy.yml  cmake.yml  coverage.yml  cppcheck.yml  cpplint.yml  doxygen.yml  test.yml
cmake/: CodeCoverage.cmake  Documentation.cmake  HandleCompilerWarnings.cmake  Sanitize.cmake  StaticCodeCheck.cmake  Utils.cmake
doc/: Doxyfile.in
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  defines_0.js  defines_1.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  namespaces_0.js  pages_0.js  searchdata.js  variables_0.js
src/: CMakeLists.txt  UKLogger.cpp  UKLogger.hpp
test/: CMakeLists.txt  TestUKLoggerFile.cpp  TestUKLoggerFileCannotDelete.cpp  TestUKLoggerFileFailOpen.cpp  TestUKLoggerScreen.cpp  UKLoggerLibTest.cpp
